@@ -1,3 +1,12 @@
+Thu Dec 12 23:22:50 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed autonick crashbug in client library.  Affected file
+	  lib/silcclient/client.c.
+
+	* Fixed Unix implementation of SilcMutex to really assert if
+	  the mutex is locked/unlcoked already.  Affected file
+	  lib/silcutil/unix/silcunixmutex.c.
+
 Thu Dec 12 12:06:59 CET 2002 Jochen Eisinger <c0ffee@penguin-breeder.org>
 
 	* Don't print signed messages when sending failed.  Affected files
